objects/CSAPEN_Customer_Satisfaction__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_New__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Customer Satisfaction</relationshipLabel>
        <relationshipName>Customer_Satisfaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CAP_Case_Details__c</fullName>
        <description>CAP case details.  URL field that points to Cap Case Details (Case #, description, outcomes, status)</description>
        <label>CAP Case Details (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Cisco_Capital_Contracts__c</fullName>
        <description>Cisco Capital Contracts.  URL field that points to Cisco Capital Contracts</description>
        <label>Cisco Capital Contracts (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Expectations_of_Cisco__c</fullName>
        <description>What is the Customer’s Overall Perception of Cisco?  What business does the customer see us in?  
URL field that points to Customer Expectations of Cisco.</description>
        <label>Customer Expectations of Cisco (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Perceptions_of_Cisco__c</fullName>
        <description>URL field that points to Customer Perceptions of Cisco</description>
        <label>Customer Perceptions of Cisco (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Loyalty__c</fullName>
        <description>Customer Satisfaction &amp; Loyalty - Per Walker surveys.  URL field that points to Customer Satisfaction &amp; Loyalty</description>
        <label>Customer Satisfaction &amp; Loyalty (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_of_their_Partners__c</fullName>
        <description>Per Walker surveys. customer's satisfaction of their Partners who provide Cisco products and services.  Customer's satisfaction of their Partners who provide Cisco products and services - per Walker surveys.
Text field to capture information on customer satisfaction of their Partners</description>
        <label>Customer Satisfaction of their Partners</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Data Source Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Deployment No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBC_History__c</fullName>
        <description>Include EBC Topic &amp; Date.  URL field that points to EBC history</description>
        <label>EBC History (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Text field to capture any other relevant customer satisfaction information</description>
        <label>Other Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <description>URL field that points to other relevant information</description>
        <label>Other URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>P1_Outages__c</fullName>
        <description>P1 Outages.  URL field that points to P1 Outage information</description>
        <label>P1 Outages (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Quality_Issue_Review__c</fullName>
        <description>Any issues the customer has had with particular products in the past which the account team may need to address. 
URL field that points to Quality Issue Review</description>
        <label>Product Quality Issue Review (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SiteMapIdentifier__c</fullName>
        <description>Determines how the record displays on the site map</description>
        <formula>"Customer Satisfaction"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiteMapIdentifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Plan_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Account Plan Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Cust_Sat_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Cust Sat Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <description>Details about Cisco's relationship to the Customer - used for Account Planning</description>
    <label>zzCustomer Satisfaction</label>
    <nameField>
        <displayFormat>CS{00000}</displayFormat>
        <label>Cust Sat ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Satisfaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>